--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 
 <body>
-	<div class="aaa">
+	<div class="main-content">
 		<img src="./eisenhower-matrix.jpg">
-		<a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+		<a class="main-info-button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 	</div>
-	<div class="centered-main-page-element">
-		<p id="topsectionforaddingelementtolist">
+	<div class="task-wrapper">
+		<p id="task-item">
 			<label for="new-task">Add Item</label>
-		<div class="task-row-wrapper">
-			<input id="new-task" class="task" type="text">
-			<button>Add</button>
-		</div>
+			<div class="task-row-wrapper">
+				<input id="new-task" class="task" type="text">
+				<button>Add</button>
+			</div>
 		</p>
 		<h3>Todo</h3>
-		<ul id="incompleteTasks">
+		<ul id="incomplete-tasks">
 			<li>
 				<input type="checkbox">
 				<label class="task">Pay Bills</label>
@@ -31,7 +31,7 @@
 					<img src="./remove.svg">
 				</button>
 			</li>
-			<li class="editMode">
+			<li class="edit-mode">
 				<input type="checkbox">
 				<label class="task">Go Shopping</label>
 				<input type="text" value="Go Shopping" class="task">
