fix(basic-3.3): short titles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="main-content">
 		<img src="./eisenhower-matrix.jpg">
-		<a class="main-info-button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+		<a class="main-button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 	</div>
 	<div class="task-wrapper">
 		<p id="task-item">
