--- a/index.html
+++ b/index.html
@@ -9,47 +9,47 @@
 
 <body>
 	<div class="main-content">
-		<img src="./eisenhower-matrix.jpg">
+		<img class="main-img" src="./eisenhower-matrix.jpg">
 		<a class="main-button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 	</div>
 	<div class="task-wrapper">
 		<p id="task-item">
-			<label for="new-task">Add Item</label>
+			<label for="new-task new-task-position new-task-width title-task ">Add Item</label>
 			<div class="task-row-wrapper">
-				<input id="new-task" class="task" type="text">
-				<button>Add</button>
+				<input id="new-task new-task-position new-task-width title-task text-task" class="task none-outline" type="text">
+				<button class="btn">Add</button>
 			</div>
 		</p>
-		<h3>Todo</h3>
-		<ul id="incomplete-tasks">
-			<li>
-				<input type="checkbox">
-				<label class="task">Pay Bills</label>
-				<input type="text" class="task">
-				<button class="edit">Edit</button>
-				<button class="delete">
-					<img src="./remove.svg">
+		<h3 class="none-style title">Todo</h3>
+		<ul class="list" id="incomplete-tasks">
+			<li class="none-style list-item">
+				<input type="checkbox" class="none-outline list-checkbox">
+				<label class="task list-item-task">Pay Bills</label>
+				<input type="text" class="task text-task none-outline">
+				<button class="edit btn">Edit</button>
+				<button class="delete btn">
+					<img class="delete-img" src="./remove.svg">
 				</button>
 			</li>
-			<li class="edit-mode">
-				<input type="checkbox">
-				<label class="task">Go Shopping</label>
-				<input type="text" value="Go Shopping" class="task">
-				<button class="edit">Save</button>
-				<button class="delete">
-					<img src="./remove.svg">
+			<li class="edit-mode none-style list-item">
+				<input type="checkbox" class="none-outline list-checkbox">
+				<label class="task edit-task-label list-item-task">Go Shopping</label>
+				<input type="text" value="Go Shopping" class="task edit-task text-task none-outline">
+				<button class="edit btn">Save</button>
+				<button class="delete btn">
+					<img class="delete-img" src="./remove.svg">
 				</button>
 			</li>
 		</ul>
-		<h3>Completed</h3>
-		<ul id="completed-tasks">
-			<li>
-				<input type="checkbox" checked>
-				<label class="task">See the Doctor</label>
-				<input type="text" class="task">
-				<button class="edit">Edit</button>
-				<button class="delete">
-					<img src="./remove.svg">
+		<h3 class="none-style title">Completed</h3>
+		<ul class="list"  id="completed-tasks">
+			<li class="none-style list-item">
+				<input class="none-outline" type="checkbox list-checkbox" checked>
+				<label class="task list-item-task label-decor">See the Doctor</label>
+				<input type="text" class="task text-task none-outline">
+				<button class="edit btn">Edit</button>
+				<button class="delete btn">
+					<img class="delete-img" src="./remove.svg">
 				</button>
 			</li>
 		</ul>
