--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 	</div>
 	<div class="task-wrapper">
 		<p id="task-item">
-			<label for="new-task new-task-position new-task-width title-task ">Add Item</label>
+			<label for="new-task" class="new-task-position new-task">Add Item</label>
 			<div class="task-row-wrapper">
-				<input id="new-task new-task-position new-task-width title-task text-task" class="task none-outline" type="text">
+				<input id="new-task" class="task none-outline text-task" type="text">
 				<button class="btn">Add</button>
 			</div>
 		</p>
-		<h3 class="none-style title">Todo</h3>
+		<h3 class="none-style title new-task">Todo</h3>
 		<ul class="list" id="incomplete-tasks">
 			<li class="none-style list-item">
 				<input type="checkbox" class="none-outline list-checkbox">
 				<label class="task list-item-task">Pay Bills</label>
-				<input type="text" class="task text-task none-outline">
+				<input type="text" class="task list-text-task none-outline">
 				<button class="edit btn">Edit</button>
 				<button class="delete btn">
 					<img class="delete-img" src="./remove.svg">
@@ -41,10 +41,10 @@
 				</button>
 			</li>
 		</ul>
-		<h3 class="none-style title">Completed</h3>
-		<ul class="list"  id="completed-tasks">
+		<h3 class="none-style title new-task">Completed</h3>
+		<ul class="list" id="completed-tasks">
 			<li class="none-style list-item">
-				<input class="none-outline" type="checkbox list-checkbox" checked>
+				<input class="none-outline list-checkbox" type="checkbox" checked>
 				<label class="task list-item-task label-decor">See the Doctor</label>
 				<input type="text" class="task text-task none-outline">
 				<button class="edit btn">Edit</button>
