--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-	<div class="main-content">
+	<header class="main-content">
 		<img class="main-img" src="./eisenhower-matrix.jpg">
 		<a class="main-button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-	</div>
-	<div class="task-wrapper">
+	</header>
+	<main class="task-wrapper">
 		<p id="task-item">
 			<label for="new-task" class="new-task-position new-task">Add Item</label>
 			<div class="task-row-wrapper">
@@ -53,7 +53,7 @@
 				</button>
 			</li>
 		</ul>
-	</div>
+	</main>
 	<script src="app.js"></script>
 </body>
 
