fix(extended-1.2): add alt for content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<header class="main-content">
-		<img class="main-img" src="./eisenhower-matrix.jpg">
+		<img class="main-img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
 		<a class="main-button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 	</header>
 	<main class="task-wrapper">
@@ -28,7 +28,7 @@
 				<input type="text" class="task list-text-task none-outline">
 				<button class="edit btn">Edit</button>
 				<button class="delete btn">
-					<img class="delete-img" src="./remove.svg">
+					<img class="delete-img" src="./remove.svg" alt="remove">
 				</button>
 			</li>
 			<li class="edit-mode none-style list-item">
@@ -37,7 +37,7 @@
 				<input type="text" value="Go Shopping" class="task edit-task text-task none-outline">
 				<button class="edit btn">Save</button>
 				<button class="delete btn">
-					<img class="delete-img" src="./remove.svg">
+					<img class="delete-img" src="./remove.svg" alt="remove">
 				</button>
 			</li>
 		</ul>
@@ -49,7 +49,7 @@
 				<input type="text" class="task text-task none-outline">
 				<button class="edit btn">Edit</button>
 				<button class="delete btn">
-					<img class="delete-img" src="./remove.svg">
+					<img class="delete-img" src="./remove.svg" alt="remove">
 				</button>
 			</li>
 		</ul>
