--- a/index.html
+++ b/index.html
@@ -9,44 +9,44 @@
 
 <body>
 	<header class="main-content">
-		<img class="main-img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
-		<a class="main-button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+		<img class="main-content__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
+		<a class="main-content__button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 	</header>
 	<main class="task-wrapper">
 		<p id="task-item">
-			<label for="new-task" class="new-task-position new-task">Add Item</label>
-			<div class="task-row-wrapper">
-				<input id="new-task" class="task none-outline text-task" type="text">
+			<label for="new-task" class="task-item__title">Add Item</label>
+			<div class="task-item-wrapper">
+				<input id="new-task" class="task-item-wrapper__input text-task" type="text">
 				<button class="btn">Add</button>
 			</div>
 		</p>
-		<h3 class="none-style title new-task">Todo</h3>
+		<h3 class="title">Todo</h3>
 		<ul class="list" id="incomplete-tasks">
-			<li class="none-style list-item">
-				<input type="checkbox" class="none-outline list-checkbox">
-				<label class="task list-item-task">Pay Bills</label>
-				<input type="text" class="task list-text-task none-outline">
+			<li class="list-item">
+				<input type="checkbox" class="none-outline list-item__checkbox">
+				<label class="list-item__task">Pay Bills</label>
+				<input type="text" class="list-item__input">
 				<button class="edit btn">Edit</button>
 				<button class="delete btn">
 					<img class="delete-img" src="./remove.svg" alt="remove">
 				</button>
 			</li>
-			<li class="edit-mode none-style list-item">
-				<input type="checkbox" class="none-outline list-checkbox">
-				<label class="task edit-task-label list-item-task">Go Shopping</label>
-				<input type="text" value="Go Shopping" class="task edit-task text-task none-outline">
+			<li class="list-item">
+				<input type="checkbox" class="none-outline list-item__checkbox">
+				<label class="list-item__task list-item__task--edit">Go Shopping</label>
+				<input type="text" value="Go Shopping" class="list-item__input list-item__input--edit">
 				<button class="edit btn">Save</button>
 				<button class="delete btn">
 					<img class="delete-img" src="./remove.svg" alt="remove">
 				</button>
 			</li>
 		</ul>
-		<h3 class="none-style title new-task">Completed</h3>
+		<h3 class="title">Completed</h3>
 		<ul class="list" id="completed-tasks">
-			<li class="none-style list-item">
-				<input class="none-outline list-checkbox" type="checkbox" checked>
-				<label class="task list-item-task label-decor">See the Doctor</label>
-				<input type="text" class="task text-task none-outline">
+			<li class="list-item">
+				<input class="none-outline list-item__checkbox" type="checkbox" checked>
+				<label class="list-item__task list-item__task--decor">See the Doctor</label>
+				<input type="text" class="list-item__input">
 				<button class="edit btn">Edit</button>
 				<button class="delete btn">
 					<img class="delete-img" src="./remove.svg" alt="remove">
