--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<img class="delete-img" src="./remove.svg" alt="remove">
 				</button>
 			</li>
-			<li class="list-item">
+			<li class="edit-mode list-item">
 				<input type="checkbox" class="none-outline list-item__checkbox">
 				<label class="list-item__task list-item__task--edit">Go Shopping</label>
 				<input type="text" value="Go Shopping" class="list-item__input list-item__input--edit">
@@ -45,7 +45,7 @@
 		<ul class="list" id="completed-tasks">
 			<li class="list-item">
 				<input class="none-outline list-item__checkbox" type="checkbox" checked>
-				<label class="list-item__task list-item__task--decor">See the Doctor</label>
+				<label class="list-item__task">See the Doctor</label>
 				<input type="text" class="list-item__input">
 				<button class="edit btn">Edit</button>
 				<button class="delete btn">
