fix(basic-2.5): line wrapping

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
 	<header class="main-content">
 		<img class="main-content__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
-		<a class="main-content__button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+		<a 
+			class="main-content__button" 
+			href="https://goal-life.com/page/method/matrix-eisenhower">
+			Want more details?
+		</a>
 	</header>
 	<main class="task-wrapper">
 		<p id="task-item">
