--- a/index.html
+++ b/index.html
@@ -2,63 +2,61 @@
 <html>
 
 <head>
-	<title>Todo App</title>
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-	<link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+  <title>Todo App</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/style.css" media="screen" charset="utf-8">
 </head>
 
 <body>
-	<header class="main-content">
-		<img class="main-content__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
-		<a 
-			class="main-content__button" 
-			href="https://goal-life.com/page/method/matrix-eisenhower">
-			Want more details?
-		</a>
-	</header>
-	<main class="task-wrapper">
-		<p id="task-item">
-			<label for="new-task" class="task-item__title">Add Item</label>
-			<div class="task-item-wrapper">
-				<input id="new-task" class="task-item-wrapper__input text-task" type="text">
-				<button class="btn">Add</button>
-			</div>
-		</p>
-		<h3 class="title">Todo</h3>
-		<ul class="list" id="incomplete-tasks">
-			<li class="list-item">
-				<input type="checkbox" class="none-outline list-item__checkbox">
-				<label class="list-item__task">Pay Bills</label>
-				<input type="text" class="list-item__input">
-				<button class="edit btn">Edit</button>
-				<button class="delete btn">
-					<img class="delete-img" src="./remove.svg" alt="remove">
-				</button>
-			</li>
-			<li class="edit-mode list-item">
-				<input type="checkbox" class="none-outline list-item__checkbox">
-				<label class="list-item__task list-item__task--edit">Go Shopping</label>
-				<input type="text" value="Go Shopping" class="list-item__input list-item__input--edit">
-				<button class="edit btn">Save</button>
-				<button class="delete btn">
-					<img class="delete-img" src="./remove.svg" alt="remove">
-				</button>
-			</li>
-		</ul>
-		<h3 class="title">Completed</h3>
-		<ul class="list" id="completed-tasks">
-			<li class="list-item">
-				<input class="none-outline list-item__checkbox" type="checkbox" checked>
-				<label class="list-item__task">See the Doctor</label>
-				<input type="text" class="list-item__input">
-				<button class="edit btn">Edit</button>
-				<button class="delete btn">
-					<img class="delete-img" src="./remove.svg" alt="remove">
-				</button>
-			</li>
-		</ul>
-	</main>
-	<script src="app.js"></script>
+  <header class="main-content">
+    <img class="main-content__img" src="./assets/eisenhower-matrix.jpg" alt="eisenhower matrix">
+    <a class="main-content__button" href="https://goal-life.com/page/method/matrix-eisenhower">
+      Want more details?
+    </a>
+  </header>
+  <main class="task-wrapper">
+    <p id="task-item">
+      <label for="new-task" class="task-item__title">Add Item</label>
+    <div class="task-item-wrapper">
+      <input id="new-task" class="task-item-wrapper__input text-task" type="text">
+      <button class="btn">Add</button>
+    </div>
+    </p>
+    <h3 class="title">Todo</h3>
+    <ul class="list" id="incomplete-tasks">
+      <li class="list-item">
+        <input type="checkbox" class="none-outline list-item__checkbox">
+        <label class="list-item__task">Pay Bills</label>
+        <input type="text" class="list-item__input">
+        <button class="edit btn">Edit</button>
+        <button class="delete btn">
+          <img class="delete-img" src="./assets/remove.svg" alt="remove">
+        </button>
+      </li>
+      <li class="edit-mode list-item">
+        <input type="checkbox" class="none-outline list-item__checkbox">
+        <label class="list-item__task list-item__task--edit">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="list-item__input list-item__input--edit">
+        <button class="edit btn">Save</button>
+        <button class="delete btn">
+          <img class="delete-img" src="./assets/remove.svg" alt="remove">
+        </button>
+      </li>
+    </ul>
+    <h3 class="title">Completed</h3>
+    <ul class="list" id="completed-tasks">
+      <li class="list-item">
+        <input class="none-outline list-item__checkbox" type="checkbox" checked>
+        <label class="list-item__task">See the Doctor</label>
+        <input type="text" class="list-item__input">
+        <button class="edit btn">Edit</button>
+        <button class="delete btn">
+          <img class="delete-img" src="./assets/remove.svg" alt="remove">
+        </button>
+      </li>
+    </ul>
+  </main>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
